--- a/bandeira.html
+++ b/bandeira.html
@@ -97,7 +97,7 @@
         <img id="para-img"  class="hidden" src="./imagens/PA.png" alt="">
         <img id="acre-img"  class="hidden" src="./imagens/AC.png" alt="">
         <img id="roraima-img"  class="hidden" src="./imagens/RR.png" alt="">
-        <img id="amapa-img"  class="hidden" src="./imagens/AM.png" alt="">
+        <img id="amapa-img"  class="hidden" src="./imagens/AP.png" alt="">
         <img id="rodonia-img"  class="hidden" src="./imagens/RO.png" alt="">
         <img id="grandeSul-img"  class="hidden" src="./imagens/RS.png" alt="">
         <img id="santa-img"  class="hidden" src="./imagens/SC.png" alt="">
@@ -156,7 +156,7 @@
             <img class="bandeirape" src="/imagens/ES.png" alt="">
             <img class="bandeirape" src="/imagens/PE.png" alt="">
             <img class="bandeirape" src="/imagens/PR.png" alt="">
-            <img class="bandeirape" src="/imagens/RR.png" alt="">
+            <img class="bandeirape" src="/imagens/AP.png" alt="">
             <img class="bandeirape" src="/imagens/GO.png" alt="">
             <img class="bandeirape" src="/imagens/AL.png" alt="">
             <img class="bandeirape" src="/imagens/SP.png" alt="">
